add lexing of token_error

--- a/meson.build
+++ b/meson.build
@@ -50,7 +50,7 @@ bin = executable(
     dependencies: [readline_dep],
 )
 
-tmp = executable(
+lexer_tests = executable(
     'tests',
     #add all files needed for unit test here
     files('src/utils/vec.c', 'src/lexer/lexer.c', 'src/lexer/token.c', 'tests/lexer_tests.c'),
@@ -64,7 +64,7 @@ run_tests = meson.source_root() / 'tests/run_tests'
 custom_target(
     'check',
     #command: [run_tests, bin] + get_option('check_args'),
-    command: [tmp],
+    command: [run_tests],
     # give the testsuite exclusive access to the terminal, which enables
     # pretty colors and live testsuite results (meson buffers it all otherwise)
     console: true,
