--- a/meson.build
+++ b/meson.build
@@ -53,7 +53,7 @@ bin = executable(
 lexer_tests = executable(
     'tests',
     #add all files needed for unit test here
-    files('src/utils/vec.c', 'src/lexer/lexer.c', 'src/lexer/token.c', 'tests/lexer_tests.c'),
+    files('src/utils/utils.c', 'src/utils/vec.c', 'src/lexer/lexer.c', 'src/lexer/token.c', 'tests/lexer_tests.c'),
     include_directories: 'src',
     install: true,
     dependencies: [criterion_dep],
