changed back meson tests

--- a/meson.build
+++ b/meson.build
@@ -51,7 +51,7 @@ bin = executable(
 )
 
 lexer_tests = executable(
-    'lexer_tests',
+    'tests',
     #add all files needed for unit test here
     files('src/utils/utils.c', 'src/utils/vec.c', 'src/lexer/lexer.c', 'src/lexer/token.c', 'tests/lexer_tests.c'),
     include_directories: 'src',
