--- a/tests/tests.yml
+++ b/tests/tests.yml
@@ -271,3 +271,50 @@
     checks:
     -   stdout
     -   exitcode
+
+-   name: FOR WITH ONE {VAR} EXP 
+    input: |
+        for i in test coucou; do 
+        echo ${i}
+        done
+    checks:
+    -   stdout
+    -   exitcode
+
+-   name: FOR MISSING VAR 
+    input: |
+        for in test coucou; do 
+        echo $i hello $icc ${i} ${i}abc $iabc${i}def
+        done
+    checks:
+    -   stdout
+    -   exitcode
+    -   has_stderr
+
+-   name: FOR MISSING IN 
+    input: |
+        for i test coucou; do 
+        echo $i hello $icc ${i} ${i}abc $iabc${i}def
+        done
+    checks:
+    -   stdout
+    -   exitcode
+    -   has_stderr
+
+-   name: FOR MISSING DONE
+    input: |
+        for i test coucou; do 
+        echo $i hello $icc ${i} ${i}abc $iabc${i}def
+    checks:
+    -   stdout
+    -   exitcode
+    -   has_stderr
+#
+#-   name: FOR HARD 
+#    input: |
+#        for i in test coucou; do 
+#        echo $i hello $icc ${i} ${i}abc $iabc${i}def
+#        done
+#    checks:
+#    -   stdout
+#    -   exitcode
